another small device responsive done

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <section id="gallery-part">
       <div class="container">
         <div class="row ">
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-sm-4">
             <div class="up-fram common-1 exnine">
               <img src="images/gallary-pic1.png" alt="gallary-pic1">
               <div class="overlay">
@@ -172,7 +172,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-sm-4">
             <div class="down-fram common-1">
               <img src="images/gallary-pic4.png" alt="gallary-pic2">
               <div class="overlay">
@@ -191,7 +191,7 @@
             </div>
            
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-sm-4">
             <div class="up-fram common-1">
               <img src="images/gallary-pic5.png" alt="gallary-pic1">
               <div class="overlay">
@@ -221,13 +221,13 @@
     ==================================================================-->
 
     <div class="title">
-      <h2>Our Gallery</h2>
+      <h2>Our Team</h2>
       <img src="images/headpic.png" alt="title-icon">
     </div>
     <section id="team-part">
       <div class="container">
         <div class="row">
-          <div class="col-lg-3 team-member ">
+          <div class="col-lg-3 col-sm-6 team-member ">
             <div class="img">
               <img src="images/instructor1.png" alt="instructor1">
               <div class="overlay">
@@ -243,7 +243,7 @@
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum 1500s.</p>
             </div>
           </div>
-          <div class="col-lg-3 team-member">
+          <div class="col-lg-3 col-sm-6 team-member">
             <div class="img">
               <img src="images/instructor2.png" alt="instructor1">
               <div class="overlay">
@@ -259,7 +259,7 @@
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum 1500s.</p>
             </div>
           </div>
-          <div class="col-lg-3 team-member">
+          <div class="col-lg-3 col-sm-6 team-member">
             <div class="img">
               <img src="images/instructor3.png" alt="instructor1">
               <div class="overlay">
@@ -275,7 +275,7 @@
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum 1500s.</p>
             </div>
           </div>
-          <div class="col-lg-3 team-member">
+          <div class="col-lg-3 col-sm-6 team-member">
             <div class="img">
               <img src="images/instructor4.png" alt="instructor1">
               <div class="overlay">
@@ -391,7 +391,7 @@
     <section id="priching-part">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 ex2">
+          <div class="col-lg-4 col-sm-4 ex2">
             <div class="header-top text-center">
               <h2>Regular Membership</h2>
             </div>
@@ -409,7 +409,7 @@
               <a href="#">Join Now</a>
             </div>
           </div>
-          <div class="col-lg-4 ex2 ">
+          <div class="col-lg-4 col-sm-4 ex2 ">
             <div class="header-top text-center">
               <h2>Standard Membership</h2>
             </div>
@@ -427,7 +427,7 @@
               <a href="#">Join Now</a>
             </div>
           </div>
-          <div class="col-lg-4 ex2 ">
+          <div class="col-lg-4 col-sm-4 ex2 ">
             <div class="header-top text-center">
               <h2>Professional Membership</h2>
             </div>
